# strelax

./: .gitignore  README.md  pyproject.toml
cluster/: launch.sh
examples/: adaptive_q_minatar.py  avg_brax.py  implicit_ac_minatar.py  implicit_q_minatar.py  implicit_td_ettm2.py  intentional_ac_brax.py  intentional_q_minatar.py  intentional_td_ettm2.py  measured_asterix_investigate.py  measured_q_minatar.py  measured_td_ettm2.py  q_minatar.py  qrc_minatar.py  run_q_minatar.sh  stream_ac_minatar.py  stream_q_minatar.py  stream_sarsa_minatar.py  stream_td_ettm2.py  td_ettm2.py  tidbd_q_minatar.py  vogd_q_minatar.py
scripts/: launch.py  minatar.py
scripts/slurmpilot/: general.yaml
scripts/slurmpilot/clusters/: ias.yaml
strelax/algorithms/: __init__.py  avg.py
strelax/environments/: ale.py  environment.py  gymnasium.py
strelax/loggers/: __init__.py  dashboard.py  logger.py  wandb.py
strelax/optimizers/: optimizer.py
strelax/optimizers/wrappers/: optax.py
strelax/utils/: __init__.py  axes.py  td_error_scaler.py
stremax/: __init__.py
stremax/algorithms/: __init__.py  algorithm.py  avg.py  qrc.py  stream_ac.py  stream_q.py  stream_sarsa.py  stream_td.py
stremax/environments/: __init__.py  ale.py  brax.py  environment.py  ett.py  gymnasium.py  gymnax.py
stremax/environments/wrappers/: __init__.py  normalize_observation.py  normalize_reward.py  observation_traces.py  record_episode_statistics.py  sticky_action.py
stremax/loggers/: __init__.py  dashboard.py  logger.py  wandb.py
stremax/networks/: __init__.py
stremax/networks/heads/: __init__.py  categorical.py  continuous_q_network.py  discrete_q_network.py  heads.py  squashed_gaussian.py  state_dependent_gaussian.py  state_independent_gaussian.py  v_network.py
stremax/networks/initializers/: __init__.py  sparse.py
stremax/networks/layers/: __init__.py  flatten.py  identity.py
stremax/optimizers/: __init__.py  adaptive_q.py  implicit.py  intentional.py  measured.py  obgd.py  optimizer.py  tidbd.py  vogd.py
stremax/optimizers/wrappers/: __init__.py  inject_logger.py  optax.py
stremax/utils/: __init__.py  axes.py  td_error_scaler.py  timestep.py  transition.py  typing.py
tests/: test_measured.py  test_vogd.py
